--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.control.Button?>
 <AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css"
             xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="it.polimi.ingsw.gui.Controller.GameController">
     <ImageView fitHeight="453.0" fitWidth="257.0" layoutX="7.0" layoutY="8.0">
         <Image url="@../Images/Board.jpg"/>
     </ImageView>
-    <AnchorPane fx:id="gameBoardContainer" layoutX="216.0" layoutY="461.0" prefHeight="317.0" prefWidth="570.0"/>
+    <ScrollPane fx:id="gameBoardScrollPane" layoutX="216.0" layoutY="461.0" prefHeight="550.0" prefWidth="900.0"
+                pannable="true">
+        <AnchorPane fx:id="gameBoardContainer"/>
+    </ScrollPane>
+
 
     <HBox fx:id="objectiveCardsContainer" layoutX="300.0" layoutY="24.0" spacing="10"/>
     <HBox fx:id="resourceDeck" layoutX="300.0" layoutY="152.0" spacing="10"/>
