--- a/CodexNaturalis/src/main/resources/fxml/CreateGameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/CreateGameState.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.Integer?>
 <?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -14,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="870.0" prefWidth="928.0" styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.CreateGameMenuController">
-    <StackPane styleClass="scene-dimensions,scene-background">
+    <StackPane styleClass="scene-dimensions,scene-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <ImageView fitHeight="794.0" fitWidth="796.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Images/CN_decoration6.png" />
@@ -51,7 +52,20 @@
     </ImageView>
     <ImageView fitHeight="150.0" fitWidth="200.0" preserveRatio="true" rotate="180.0" scaleY="-1" AnchorPane.bottomAnchor="0" AnchorPane.rightAnchor="0">
 
-        <Image url="@../Images/CN_Decoration1.jpg" />
+              <Image url="@../Images/CN_Decoration1.jpg" />
     </ImageView>
+   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="10.0" layoutY="10.0" preserveRatio="true" rotate="180.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <image>
+         <Image url="@../Images/CN_Decoration1.jpg" />
+      </image>
+      <rotationAxis>
+         <Point3D x="90.0" z="1.0" />
+      </rotationAxis>
+   </ImageView>
+   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="20.0" layoutY="20.0" preserveRatio="true" rotate="180.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <image>
+         <Image url="@../Images/CN_Decoration1.jpg" />
+      </image>
+   </ImageView>
 
 </AnchorPane>
