--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -15,15 +16,20 @@
     <ScrollPane fx:id="gameBoardScrollPane" hbarPolicy="NEVER" layoutX="216.0" layoutY="461.0" pannable="true" prefHeight="500.0" prefWidth="900.0" style="-fx-focus-color: transparent;" vbarPolicy="NEVER">
         <AnchorPane fx:id="gameBoardContainer" style="-fx-background-color: #dedccc;" />
     </ScrollPane>
-    <HBox fx:id="resourceDeck" layoutX="300.0" layoutY="152.0" spacing="10">
-      <children>
-      
-      
-          <HBox fx:id="objectiveCardsContainer" spacing="10" />
-      </children></HBox>
+   <Label layoutX="272.0" layoutY="-1.0" prefHeight="30.0" prefWidth="129.0" styleClass="normal-label" text="OBJECTIVE CARDS">
+   </Label>
+    <HBox fx:id="objectiveCardsContainer" layoutX="300.0" layoutY="24.0" spacing="10" />
+   <Label layoutX="272.0" layoutY="134.0" styleClass="normal-label" text="RESOURCE CARD DESK">
+   </Label>
+    <HBox fx:id="resourceDeck" layoutX="300.0" layoutY="150.0" prefHeight="0.0"  spacing="10" />
+   <Label layoutX="272.0" layoutY="263.0" styleClass="normal-label" text="GOLDEN CARD DESK">
+   </Label>
     <HBox fx:id="goldenDeck" layoutX="300.0" layoutY="280.0" spacing="10" />
-    <VBox layoutX="25.0" layoutY="455.0" spacing="5">
-        <Button onAction="#handleShowBackButton" text="Show Back" />
-        <VBox fx:id="playerHandBox" spacing="10" />
-    </VBox>
+    <VBox layoutX="14.0" layoutY="502.0" spacing="5" />
+   <Label layoutX="14.0" layoutY="472.0" styleClass="normal-label" text="YOUR AVAIBLE CARDS" />
+     <VBox fx:id="playerHandBox" layoutX="14.0" layoutY="490.0" spacing="10">
+      <children>
+           <Button onAction="#handleShowBackButton" style="-fx-background-color: #a2ecbb;" text="Show Back" />
+      </children>
+   </VBox>
 </AnchorPane>
