--- a/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
@@ -51,4 +51,12 @@
          <Image url="@../Images/CN_decoration10.png" />
       </image>
    </ImageView>
+   <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="78.0" style="-fx-background-color: #a2ecbb;" text="EXIT">
+      <font>
+         <Font name="Book Antiqua Bold Italic" size="14.0" />
+      </font>
+      <VBox.margin>
+         <Insets />
+      </VBox.margin>
+   </Button>
 </VBox>
