--- a/CodexNaturalis/src/main/resources/fxml/LobbyMenuState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/LobbyMenuState.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.LobbyMenuController">
     <StackPane styleClass="scene-dimensions,scene-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -32,4 +33,9 @@
     <!-- Bottom-Right Corner -->
     <ImageView scaleX="-1" styleClass="corner-image" AnchorPane.bottomAnchor="0" AnchorPane.rightAnchor="0">
     </ImageView>
+   <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="128.0" style="-fx-background-color: #a2ecbb;" text="EXIT" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0">
+      <font>
+         <Font name="Book Antiqua Bold Italic" size="14.0" />
+      </font>
+   </Button>
 </AnchorPane>
