--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -21,15 +22,23 @@
     <HBox fx:id="objectiveCardsContainer" layoutX="300.0" layoutY="24.0" spacing="10" />
    <Label layoutX="272.0" layoutY="134.0" styleClass="normal-label" text="RESOURCE CARD DESK">
    </Label>
-    <HBox fx:id="resourceDeck" layoutX="300.0" layoutY="150.0" prefHeight="0.0"  spacing="10" />
+    <HBox fx:id="resourceDeck" layoutX="300.0" layoutY="150.0" prefHeight="0.0" spacing="10" />
    <Label layoutX="272.0" layoutY="263.0" styleClass="normal-label" text="GOLDEN CARD DESK">
    </Label>
     <HBox fx:id="goldenDeck" layoutX="300.0" layoutY="280.0" spacing="10" />
     <VBox layoutX="14.0" layoutY="502.0" spacing="5" />
-   <Label layoutX="14.0" layoutY="472.0" styleClass="normal-label" text="YOUR AVAIBLE CARDS" />
+   <Label layoutX="14.0" layoutY="472.0" styleClass="normal-label" text="YOUR AVAILABLE CARDS" />
      <VBox fx:id="playerHandBox" layoutX="14.0" layoutY="490.0" spacing="10">
       <children>
            <Button onAction="#handleShowBackButton" style="-fx-background-color: #a2ecbb;" text="Show Back" />
       </children>
    </VBox>
+   <ButtonBar layoutX="272.0" layoutY="421.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="845.0">
+     <buttons>
+         <Button fx:id="Player3" onAction="#handleShowPlayer3Desk" style="-fx-background-color: #a2ecbb;" text="Player4 desk" />
+         <Button fx:id="Player2" onAction="#handleShowPlayer2Desk" style="-fx-background-color: #a2ecbb;" text="Player3 desk" />
+         <Button fx:id="Player1" onAction="#handleShowPlayer1Desk" style="-fx-background-color: #a2ecbb;" text="Player2 desk" />
+         <Button fx:id="Player0" onAction="#handleShowPlayer0Desk" style="-fx-background-color: #a2ecbb;" text="Player1 desk" />
+     </buttons>
+   </ButtonBar>
 </AnchorPane>
