--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -1,59 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
-<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.GameController">
+<?import javafx.scene.layout.*?>
+<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css"
+            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="it.polimi.ingsw.gui.Controller.GameController">
     <ImageView fitHeight="596.0" fitWidth="358.0" layoutX="1156.0" layoutY="14.0">
-        <Image url="@../Images/Board.jpg" />
+        <Image url="@../Images/Board.jpg"/>
     </ImageView>
-   <VBox alignment="TOP_CENTER" layoutX="37.0" layoutY="14.0">
-      <children>
-         <Label alignment="CENTER" prefHeight="30.0" prefWidth="129.0" styleClass="normal-label" text="OBJECTIVE CARDS">
+    <VBox alignment="TOP_CENTER" layoutX="37.0" layoutY="14.0">
+        <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+        </padding>
+        <Label alignment="CENTER" prefHeight="30.0" prefWidth="129.0" styleClass="normal-label"
+               text="OBJECTIVE CARDS">
             <VBox.margin>
-               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </VBox.margin></Label>
-          <VBox fx:id="objectiveCardsContainer" spacing="5" />
-         <Label alignment="CENTER" styleClass="normal-label" text="YOUR AVAILABLE CARDS">
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            </VBox.margin>
+        </Label>
+        <VBox fx:id="objectiveCardsContainer" spacing="5"/>
+        <Label alignment="CENTER" styleClass="normal-label" text="YOUR AVAILABLE CARDS">
             <VBox.margin>
-               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </VBox.margin></Label>
-           <Button onAction="#handleShowBackButton" style="-fx-background-color: #a2ecbb;" text="Show Back" />
-           <VBox fx:id="playerHandBox" spacing="10" />
-      </children>
-      <padding>
-         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-      </padding>
-   </VBox>
-   <VBox layoutX="222.0" layoutY="14.0">
-      <children>
-         <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="845.0">
-           <buttons>
-               <Button fx:id="Player3" onAction="#handleShowPlayer3Desk" style="-fx-background-color: #a2ecbb;" text="Player4 desk" />
-               <Button fx:id="Player2" onAction="#handleShowPlayer2Desk" style="-fx-background-color: #a2ecbb;" text="Player3 desk" />
-               <Button fx:id="Player1" onAction="#handleShowPlayer1Desk" style="-fx-background-color: #a2ecbb;" text="Player2 desk" />
-               <Button fx:id="Player0" onAction="#handleShowPlayer0Desk" style="-fx-background-color: #a2ecbb;" text="Player1 desk" />
-           </buttons>
-         </ButtonBar>
-          <ScrollPane fx:id="gameBoardScrollPane" hbarPolicy="NEVER" pannable="true" prefHeight="450.0" prefWidth="900.0" style="-fx-focus-color: transparent;" vbarPolicy="NEVER">
-              <AnchorPane fx:id="gameBoardContainer" style="-fx-background-color: #dedccc;" />
-          </ScrollPane>
-         <Label fx:id="lastTurnLabel" styleClass="normal-label" text="THE LAST TURN HAS BEGUN" />
-         <Label fx:id="infoGame" styleClass="normal-label" text="what is happening" />
-         <Label styleClass="normal-label" text="RESOURCE CARD DESK">
-   </Label>
-          <HBox fx:id="resourceDeck" spacing="10" />
-         <Label styleClass="normal-label" text="GOLDEN CARD DESK">
-   </Label>
-          <HBox fx:id="goldenDeck" spacing="10" />
-      </children>
-   </VBox>
+                <Insets bottom="5.0" top="5.0"/>
+            </VBox.margin>
+        </Label>
+        <Button onAction="#handleShowBackButton" style="-fx-background-color: #a2ecbb;" text="Show Back"/>
+        <VBox fx:id="playerHandBox" spacing="10"/>
+    </VBox>
+    <VBox layoutX="222.0" layoutY="14.0">
+        <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="845.0">
+            <buttons>
+                <Button fx:id="Player3" onAction="#handleShowPlayer3Desk" style="-fx-background-color: #a2ecbb;"
+                        text="Player4 desk"/>
+                <Button fx:id="Player2" onAction="#handleShowPlayer2Desk" style="-fx-background-color: #a2ecbb;"
+                        text="Player3 desk"/>
+                <Button fx:id="Player1" onAction="#handleShowPlayer1Desk" style="-fx-background-color: #a2ecbb;"
+                        text="Player2 desk"/>
+                <Button fx:id="Player0" onAction="#handleShowPlayer0Desk" style="-fx-background-color: #a2ecbb;"
+                        text="Player1 desk"/>
+            </buttons>
+        </ButtonBar>
+        <ScrollPane fx:id="gameBoardScrollPane" hbarPolicy="NEVER" pannable="true" prefHeight="450.0"
+                    prefWidth="900.0" style="-fx-focus-color: transparent;" vbarPolicy="NEVER">
+            <AnchorPane fx:id="gameBoardContainer" style="-fx-background-color: #dedccc;"/>
+        </ScrollPane>
+        <Label fx:id="lastTurnLabel" styleClass="normal-label" text="THE LAST TURN HAS BEGUN"/>
+        <Label fx:id="infoGame" styleClass="normal-label" text="what is happening"/>
+        <Label styleClass="normal-label" text="RESOURCE CARD DESK">
+        </Label>
+        <HBox fx:id="resourceDeck" spacing="10"/>
+        <Label styleClass="normal-label" text="GOLDEN CARD DESK">
+        </Label>
+        <HBox fx:id="goldenDeck" spacing="10"/>
+    </VBox>
 </AnchorPane>
