--- a/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/ColorSelection.fxml
@@ -18,10 +18,7 @@
          <Image url="@../Images/CN_decoration10.png" />
       </image>
    </ImageView>
-    <Label text="Choose a Color">
-        <font>
-            <Font name="Book Antiqua Bold Italic" size="24.0" />
-        </font>
+    <Label styleClass="title-label" text="CHOOSE A COLOR">
     </Label>
     <HBox fx:id="colorContainer" alignment="CENTER" spacing="20">
 
@@ -30,19 +27,13 @@
       <font>
          <Font name="Book Antiqua Bold Italic" size="12.0" />
       </font></Label>
-    <Button fx:id="selectColorButton" onAction="#handleSelectColor" style="-fx-background-color: #a2ecbb;" text="Select Color">
-        <font>
-            <Font name="Book Antiqua Bold Italic" size="12.0" />
-        </font>
+    <Button fx:id="selectColorButton" onAction="#handleSelectColor" style="-fx-background-color: #a2ecbb;" styleClass="little-label" text="Select Color">
     </Button>
    <ImageView fitHeight="201.0" fitWidth="1012.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
       <image>
          <Image url="@../Images/CN_decoration10.png" />
       </image>
    </ImageView>
-   <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="78.0" style="-fx-background-color: #a2ecbb;" text="EXIT">
-      <font>
-         <Font name="Book Antiqua Bold Italic" size="14.0" />
-      </font>
+   <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="78.0" style="-fx-background-color: #a2ecbb;" styleClass="normal-label" text="EXIT">
    </Button>
 </VBox>
