--- a/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/InitializeStarterCard.fxml
@@ -18,19 +18,13 @@
          <Image url="@../Images/CN_decoration10.png" />
       </image>
    </ImageView>
-
-    <Label style="-fx-font-size: 16px;" text="Play Your Starter Card:" />
+   <Label styleClass="title-label" text="PLAY YOUR STARTER CARD">
+   </Label>
     <HBox alignment="CENTER" spacing="20">
         <VBox fx:id="frontCardContainer" alignment="CENTER" spacing="10">
-            <Label text="Front:">
-                <font>
-                    <Font name="Book Antiqua Bold Italic" size="12.0" />
-                </font>
+            <Label styleClass="little-label" text="Front:">
             </Label>
-            <Button fx:id="playFrontButton" onAction="#handlePlayFront" style="-fx-background-color: #a2ecbb;" text="Play Front">
-                <font>
-                    <Font name="Book Antiqua Bold Italic" size="12.0" />
-                </font>
+            <Button fx:id="playFrontButton" onAction="#handlePlayFront" style="-fx-background-color: #a2ecbb;" styleClass="little-label" text="Play Front">
             </Button>
         </VBox>
         <VBox fx:id="backCardContainer" alignment="CENTER" spacing="10">
@@ -39,10 +33,7 @@
                     <Font name="Book Antiqua Bold Italic" size="12.0" />
                 </font>
             </Label>
-            <Button fx:id="playBackButton" onAction="#handlePlayBack" style="-fx-background-color: #a6f84b;" text="Play Back">
-                <font>
-                    <Font name="Book Antiqua Bold Italic" size="12.0" />
-                </font>
+            <Button fx:id="playBackButton" onAction="#handlePlayBack" style="-fx-background-color: #a6f84b;" styleClass="normal-label" text="Play Back">
             </Button>
         </VBox>
     </HBox>
@@ -51,10 +42,7 @@
          <Image url="@../Images/CN_decoration10.png" />
       </image>
    </ImageView>
-   <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="78.0" style="-fx-background-color: #a2ecbb;" text="EXIT">
-      <font>
-         <Font name="Book Antiqua Bold Italic" size="14.0" />
-      </font>
+   <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="78.0" style="-fx-background-color: #a2ecbb;" styleClass="normal-label" text="EXIT">
       <VBox.margin>
          <Insets />
       </VBox.margin>
