--- a/CodexNaturalis/src/main/resources/styles.css
+++ b/CodexNaturalis/src/main/resources/styles.css
@@ -32,7 +32,15 @@
 .primary-button:hover {
     -fx-background-color: #1a7955;
 }
-
+.popup{
+    -fx-background-color: #FFDAB9;
+    -fx-border-color: #DEB887;
+    -fx-border-width: 1px;
+    -fx-border-style: solid;
+    -fx-background-radius: 5px;
+    -fx-width: 500px;
+    -fx-height: 400px;
+}
 .selected-card {
     -fx-border-color: #a2ecbb;
     -fx-border-width: 2px;
