--- a/CodexNaturalis/src/main/resources/styles.css
+++ b/CodexNaturalis/src/main/resources/styles.css
@@ -38,8 +38,8 @@
     -fx-border-width: 1px;
     -fx-border-style: solid;
     -fx-background-radius: 5px;
-    -fx-width: 500px;
-    -fx-height: 400px;
+    -fx-pref-width: 500px;
+    -fx-pref-height: 300px;
 }
 .selected-card {
     -fx-border-color: #a2ecbb;
