--- a/CodexNaturalis/src/main/resources/fxml/GameState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GameState.fxml
@@ -1,66 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="it.polimi.ingsw.gui.Controller.GameController">
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.Controller.GameController">
     <ImageView fitHeight="533.0" fitWidth="320.0" layoutX="1156.0" layoutY="14.0">
-        <Image url="@../Images/Board.jpg"/>
+        <Image url="@../Images/Board.jpg" />
     </ImageView>
     <VBox alignment="TOP_CENTER" layoutX="37.0" layoutY="14.0">
         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
         </padding>
         <Label alignment="CENTER" prefHeight="30.0" prefWidth="129.0" styleClass="normal-label" text="OBJECTIVE CARDS">
             <VBox.margin>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </VBox.margin>
         </Label>
-        <VBox fx:id="objectiveCardsContainer" spacing="5"/>
+        <VBox fx:id="objectiveCardsContainer" spacing="5" />
         <Label alignment="CENTER" styleClass="normal-label" text="YOUR AVAILABLE CARDS">
             <VBox.margin>
-                <Insets bottom="5.0" top="5.0"/>
+                <Insets bottom="5.0" top="5.0" />
             </VBox.margin>
         </Label>
-        <Button fx:id="showBackButton" onAction="#handleShowBackButton" style="-fx-background-color: #a2ecbb;"
-                text="Show Back"/>
-        <VBox fx:id="playerHandBox" spacing="10"/>
+        <Button fx:id="showBackButton" onAction="#handleShowBackButton" style="-fx-background-color: #a2ecbb;" text="Show Back" />
+        <VBox fx:id="playerHandBox" spacing="10" />
     </VBox>
     <VBox layoutX="222.0" layoutY="14.0">
         <TabPane fx:id="playerDeskTabPane" prefWidth="845.0">
-            <Tab text="Player1 desk"/>
-            <Tab text="Player2 desk"/>
-            <Tab text="Player3 desk"/>
-            <Tab text="Player4 desk"/>
+            <Tab text="Player1 desk" />
+            <Tab text="Player2 desk" />
+            <Tab text="Player3 desk" />
+            <Tab text="Player4 desk" />
         </TabPane>
-        <ScrollPane fx:id="gameBoardScrollPane" hbarPolicy="NEVER" pannable="true" prefHeight="450.0" prefWidth="900.0"
-                    style="-fx-focus-color: transparent;" vbarPolicy="NEVER">
-            <AnchorPane fx:id="gameBoardContainer" style="-fx-background-color: #dedccc;"/>
+        <ScrollPane fx:id="gameBoardScrollPane" hbarPolicy="NEVER" pannable="true" prefHeight="450.0" prefWidth="900.0" style="-fx-focus-color: transparent;" vbarPolicy="NEVER">
+            <AnchorPane fx:id="gameBoardContainer" style="-fx-background-color: #dedccc;" />
         </ScrollPane>
-        <Label fx:id="infoGame" styleClass="normal-label" text="what is happening"/>
+        <Label fx:id="infoGame" styleClass="normal-label" text="what is happening" />
         <Label styleClass="normal-label" text="RESOURCE CARD DESK">
         </Label>
-        <HBox fx:id="resourceDeck" spacing="10"/>
+        <HBox fx:id="resourceDeck" spacing="10" />
         <Label styleClass="normal-label" text="GOLDEN CARD DESK">
         </Label>
-        <HBox fx:id="goldenDeck" spacing="10"/>
+        <HBox fx:id="goldenDeck" spacing="10" />
     </VBox>
-    <BorderPane fx:id="popUp" layoutX="641.0" layoutY="250.0" prefHeight="200.0" prefWidth="502.0" styleClass="popup"
-                AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0"
-                AnchorPane.topAnchor="300.0">
+    <BorderPane fx:id="popUp" layoutX="641.0" layoutY="250.0" prefHeight="198.0" prefWidth="468.0" styleClass="popup" AnchorPane.bottomAnchor="302.0" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="300.0">
         <top>
-            <HBox prefHeight="32.0" prefWidth="500.0" BorderPane.alignment="CENTER">
-                <Label fx:id="titlePopUp" prefHeight="31.0" prefWidth="396.0" styleClass="normal-label" text="TITLE"/>
-                <Button fx:id="closePopUpButton" onMouseClicked="#closePopUp" prefHeight="31.0" prefWidth="104.0"
-                        style="-fx-background-color: #a2ecbb;" text="X"/>
+            <HBox prefHeight="32.0" prefWidth="500.0" style="-fx-background-color: #2E8B57;" BorderPane.alignment="CENTER">
+                <Label fx:id="titlePopUp" alignment="CENTER" prefHeight="31.0" prefWidth="396.0" style="-fx-border-radius: 15;" styleClass="normal-label" text="TITLE" textFill="#a2ecbb" />
+                <Button fx:id="closePopUpButton" onMouseClicked="#closePopUp" prefHeight="31.0" prefWidth="104.0" style="-fx-background-color: #2E8B57;" text="X" textFill="#a2ecbb">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Button>
             </HBox>
         </top>
         <center>
-            <Label fx:id="messagePopUp" styleClass="normal-label" text="MESSAGE" BorderPane.alignment="CENTER"/>
+            <Label fx:id="messagePopUp" alignment="CENTER" styleClass="normal-label" text="MESSAGE" textFill="SEAGREEN" BorderPane.alignment="CENTER" />
         </center>
     </BorderPane>
 </AnchorPane>
