--- a/CodexNaturalis/src/main/resources/styles.css
+++ b/CodexNaturalis/src/main/resources/styles.css
@@ -33,13 +33,14 @@
     -fx-background-color: #1a7955;
 }
 .popup{
-    -fx-background-color: #FFDAB9;
-    -fx-border-color: #DEB887;
+    -fx-background-color: #a2ecbb;
+    -fx-border-color:  #2E8B57;
     -fx-border-width: 1px;
     -fx-border-style: solid;
     -fx-background-radius: 5px;
     -fx-pref-width: 500px;
     -fx-pref-height: 300px;
+    -fx-alignment: center;
 }
 .selected-card {
     -fx-border-color: #a2ecbb;
